[gd_scene load_steps=4 format=3 uid="uid://cc7yn1v7t1bu0"]

[ext_resource type="Script" path="res://scripts/scenes/library.gd" id="1_6wuwk"]
[ext_resource type="Texture2D" uid="uid://ch1ins151k217" path="res://assets/placeholder.png" id="2_ghq5l"]
[ext_resource type="PackedScene" uid="uid://ceeoaxm7we356" path="res://scenes/elements/schema_button.tscn" id="3_6y5j3"]

[node name="library" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6wuwk")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.382504, 0.418663, 0.442298, 1)

[node name="menu" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.173611
anchor_bottom = 1.0
grow_vertical = 2
color = Color(0.490196, 0.529412, 0.552941, 1)
metadata/_edit_use_anchors_ = true

[node name="margin" type="MarginContainer" parent="menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="vbox" type="VBoxContainer" parent="menu/margin"]
layout_mode = 2
theme_override_constants/separation = 7

[node name="server_name" type="Label" parent="menu/margin/vbox"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Pupi du pu"
horizontal_alignment = 1
text_overrun_behavior = 1

[node name="vbox_top" type="VBoxContainer" parent="menu/margin/vbox"]
layout_mode = 2
size_flags_vertical = 3

[node name="home" type="Button" parent="menu/margin/vbox/vbox_top"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Home üè†"

[node name="games" type="Button" parent="menu/margin/vbox/vbox_top"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Games üéÆ"

[node name="adventures" type="Button" parent="menu/margin/vbox/vbox_top"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Adventures üìô"

[node name="game_systems" type="Button" parent="menu/margin/vbox/vbox_top"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Game systems üìú"

[node name="vbox_down" type="VBoxContainer" parent="menu/margin/vbox"]
layout_mode = 2

[node name="server_manager" type="Button" parent="menu/margin/vbox/vbox_down"]
layout_mode = 2
text = "Server manager üó∫Ô∏è"

[node name="settings" type="Button" parent="menu/margin/vbox/vbox_down"]
layout_mode = 2
text = "Settings ‚öôÔ∏è"

[node name="exit" type="Button" parent="menu/margin/vbox/vbox_down"]
layout_mode = 2
text = "Exit ‚ùå"

[node name="tab_container" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.173611
anchor_top = 0.0679012
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
tabs_visible = false
metadata/_edit_use_anchors_ = true

[node name="game_system_view" type="Control" parent="tab_container"]
layout_mode = 2

[node name="vbox" type="VBoxContainer" parent="tab_container/game_system_view"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="hbox" type="HBoxContainer" parent="tab_container/game_system_view/vbox"]
layout_mode = 2
alignment = 1

[node name="refrect" type="ReferenceRect" parent="tab_container/game_system_view/vbox/hbox"]
clip_contents = true
custom_minimum_size = Vector2(160, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="texture" type="TextureRect" parent="tab_container/game_system_view/vbox/hbox/refrect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ghq5l")
expand_mode = 3
stretch_mode = 5

[node name="names" type="VBoxContainer" parent="tab_container/game_system_view/vbox/hbox"]
layout_mode = 2
alignment = 1

[node name="names" type="HBoxContainer" parent="tab_container/game_system_view/vbox/hbox/names"]
layout_mode = 2

[node name="system_name" type="Label" parent="tab_container/game_system_view/vbox/hbox/names/names"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 25
text = "DnD 5e"

[node name="code_name" type="Label" parent="tab_container/game_system_view/vbox/hbox/names/names"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 10
text = "(dnd-5e)"

[node name="author" type="Label" parent="tab_container/game_system_view/vbox/hbox/names"]
layout_mode = 2
text = "petraxeman"

[node name="content_count" type="Label" parent="tab_container/game_system_view/vbox/hbox/names"]
layout_mode = 2
text = "Notes: 251"

[node name="grid" type="GridContainer" parent="tab_container/game_system_view/vbox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 3
theme_override_constants/v_separation = 7
columns = 2

[node name="schema" parent="tab_container/game_system_view/vbox/grid" instance=ExtResource("3_6y5j3")]
layout_mode = 2

[node name="tab_bar" type="TabBar" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.173611
anchor_right = 1.0
anchor_bottom = 0.0679012
grow_horizontal = 0
tab_close_display_policy = 2
drag_to_rearrange_enabled = true
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="menu/margin/vbox/vbox_top/home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="menu/margin/vbox/vbox_top/game_systems" to="." method="_on_game_systems_pressed"]
[connection signal="tab_changed" from="tab_bar" to="." method="_on_tab_bar_tab_changed"]
[connection signal="tab_close_pressed" from="tab_bar" to="." method="_on_tab_bar_tab_close_pressed"]
